# picodeps

./: CMakeLists.txt  bootstrap.sh  bootstrap2.sh  dependencies.json
cmake/Modules/: FindLibarchive.cmake  FindLibcrypto.cmake  FindLibcurl.cmake  FindLibssl.cmake
include/: dependency.h  petablocks.h  picodeps.h
lib/: dependency.cpp  dependency.h  petablocks.cpp  tarball.cpp  tarball.h
